Add handling of exo ssvep dataset and cov matrices

--- a/Pipfile
+++ b/Pipfile
@@ -12,13 +12,26 @@ numpy = "*"
 scipy = "*"
 sklearn = "*"
 matlab = "*"
-matplotlib = "*"
-mne = "*"
+matplotlib = ">=2.2"
+mne = ">=0.19"
 xarray = "*"
 pylsl = "*"
 torch = "*"
 braindecode = "*"
 genbci = {editable = true, path = "."}
+pyriemann = "*"
+moabb = {path = "/Users/daniele/Desktop/moabb"}
+scikit-learn = "*"
+seaborn = ">=0.9.0"
+h5py = "*"
+pandas = "*"
+pyyaml = "*"
+coloredlogs = "*"
+sphinx-gallery = "*"
+sphinx-bootstrap-theme = "*"
+numpydoc = "*"
+pillow = "*"
+m2r = "*"
 
 [requires]
 python_version = "3.7"
