--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,8 @@ matlab = "*"
 matplotlib = ">=2.2"
 mne = ">=0.19"
 xarray = "*"
-pylsl = "*"
-torch = "*"
+pylsl = "1.13.6"
+torch = "1.1.0"
 braindecode = "*"
 genbci = {editable = true, path = "."}
 pyriemann = "*"
